# mybid

./: LICENSE  README.md  pyproject.toml
bidder/: asgi.py  settings.py  urls.py  wsgi.py
