[tool.poetry]
name = "mybid"
version = "0.1.0"
description = "This is a bidder application for any listed item."
authors = ["Amarjith Sudhakar.K"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
